--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 
 <!--header-->
     <header>
-        <img src="images 2/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
+        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
             <!--logo-->
             <div class="logo">
-                <img src="images 2/logo.png" alt="Great Cliffs Logo" width="125"> 
+                <img src="images/logo.png" alt="Great Cliffs Logo" width="125"> 
             </div>
             
             <!--nav-->
@@ -31,14 +31,51 @@
     </header>
 
     <!--Main Content-->
-    <main>
-        <h2>Introducing California's Greatest Cliffs</h2>
-        <h3>What is so unique about California cliffs?</h3>
-        <p>California cliffs are one of a kind in the United States where no cliffs are as magnificent and beautiful as them. And California is the only state that have cliffs that fronts all possible environments: sea, river, mountains and canyons. There are four such individual unique cliffs: West Cliff, North Cliff, East Cliff and South Cliff. All offer fantastic overlooking views, recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
-        <h3>Where are these cliffs?</h3>
-        <p>Located within a 100 mile radius from Irvine, California, they can be reached by roads easily. The closest cliff to Irvine is West Cliff, which is the most popular and most visited.</p>
-    </main>
+    <h1>Contacting Us</h1>
+    <p>If you need more information about the Cliffs, Hours of Operations, Facilities or questions about this site, please contact us bu using one of the following:
+    </p>
+    <h2>Phone:</h2>
+    <p>(800)GCLIFFS</p>
 
+    <h2>Email:</h2>
+    <p>info@greatcliffs.com</p>
+
+    <h2>Fill Out This Form:</h2>
+
+    <!--form-->
+    <form>
+        <form action="/contact" method="post">
+            <fieldset>
+                <legend>Contact Form</legend>
+                <label>Enter your full name</label> <br>
+                <input type="text" name="name"> <br>
+                <label>Enter your email</label> <br>
+                <input type="email" name="email"> <br>
+                <label>Enter your phone</label> <br>
+                <input type="tel" name="phone"> <br>
+
+                <br>
+
+                <label>How should we contact you?</label><br>
+                <input type="radio" name="contact" value="email">Email
+                <input type="radio" name="contact" value="phone">Phone<br>
+
+                <br>
+
+                <lable>Which Cliff are you inquiring?</lable><br>
+                <select>
+                    <option>West Cliff</option>
+                </select>
+
+                <br><br>
+                <label>How did you hear about us?</label><br>
+                <textarea row="5" cols="30"></textarea>
+
+                <br>
+                <input type="submit" value="Inquire">
+            </fieldset>
+    </form>
+    
     <!--section-->
     <section>
             <ul id="partners">
