--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <!--header-->
     <header>
-        <img src="images 2/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
+        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
             <!--logo-->
             <div class="logo">
-                <img src="images 2/logo.png" alt="Great Cliffs Logo" width="125"> 
+                <img src="images/logo.png" alt="Great Cliffs Logo" width="125"> 
             </div>
             
             <!--nav-->
