--- a/index.html
+++ b/index.html
@@ -4,14 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<!--Embed Style Method-->
+<style>
+    header {
+        width: 100%;
+        min-height: 400px;
+        padding-top: 3em;
+    }
+
+    #home header {
+        background: no-repeat lightgrey url(images/cliff_ocean.jpg);
+        background-size: 1500px; 
+    }
+
+    .main-header {
+        background-color: rgb(255, 255, 255, 0.8);
+        width: 700px;
+        margin: 2em auto 0 auto;
+        min-height: 100px;
+        height: 100px;
+    }
+
+
+
+
+    </style>
 </head>
-<body>
+
+
+<body id="home">
 <!-- Container-->
 <div id="container">
 
 <!--header-->
     <header>
-        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
             <!--logo-->
             <div class="logo">
