add week2 day1 HW home page CSS style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+<!--Font Awesome-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!--Embed Style Method-->
 <style>
 /* Header */
@@ -114,6 +117,55 @@
         background-color: #ecfab8;
     }
 
+    footer #nondisclaimer .copy {
+        padding: 3.5em 3.5em 3.5em 13em;
+        float: left;
+        font-size: 0.9em;
+    }
+
+    footer #nondisclaimer .social {
+        padding: 2.5em; 
+        margin-right: 9.25em;
+        float: right;
+    }
+
+    footer #disclaimer {
+        clear: both;
+    }
+
+    footer #disclaimer p{
+        font-size: 0.85em;
+        text-align: center;
+    }
+
+    footer #nondisclaimer .social .fa {
+    padding: 15px;
+    font-size: 15px;
+    width: 15px;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 4px;
+    border-radius: 50%;
+    }
+
+    footer #nondisclaimer .social .fa:hover {
+    opacity: 0.7;
+    }
+
+    footer #nondisclaimer .social .fa-facebook {
+    background: #3B5998;
+    color: white;
+    }
+
+    footer #nondisclaimer .social .fa-twitter {
+    background: #55ACEE;
+    color: white;
+    }
+
+    footer #nondisclaimer .social .fa-instagram {
+    background: #125688;
+    color: white;
+    }
 
     </style>
 </head>
@@ -169,9 +221,9 @@
     <div id="nondisclaimer">
         <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
         <div class="social">
-            <h3>Facebook Image</h3>
-            <h3>Instagram Image</h3>
-            <h3>Twitter Image</h3>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-twitter"></a>
         </div>
     </div>
     <div id="disclaimer">
