--- a/activities.html
+++ b/activities.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<!--Link to CSS-->
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body id="activities">
 <!-- Container-->
 <div id="container">
 
 <!--header-->
     <header>
-        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
             <!--logo-->
             <div class="logo">
@@ -21,10 +23,10 @@
             <!--nav-->
             <nav class="main-menu">
                 <ul>
-                    <li>Home</li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li>Cliffs</li>
-                    <li>Events</li>
-                    <li>Contact</li>
+                    <li><a href="activities.html">Activities</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,9 +38,9 @@
         <p>There are many planned activities at all the cliff sites. Some are scheduled daily, weekly, monthly and yearly. <br> 
             These activities are not however run by the state park and recreational department. They are operated and manage by private vendors but are partners with the state department. <br> 
             Therefore, for schedule inquiries or information, please contact them directly. For a list of activities, please refer to the table below:</p>
-        <table border="1">
+        <table>
             <caption>Activities at the Cliffs</caption>
-                <thread>
+                <thead>
                     <tr>
                         <th>Activity</th>
                         <th>West Cliff</th>
@@ -46,7 +48,7 @@
                         <th>East Cliff</th>
                         <th>South Cliff</th>
                     </tr>
-                </thread>
+                </thead>
                     <tbody>
                         <tr>
                             <td>Hiking</td>
@@ -91,14 +93,14 @@
 
     <!--section-->
     <section>
-            <ul id="partners">
-                <li class="partner"><h3>Partner 1 Image</h3></li>
-                <li class="partner"><h3>Partner 2 Image</h3></li>
-                <li class="partner"><h3>Partner 3 Image</h3></li>
-                <li class="partner"><h3>Partner 4 Image</h3></li>
-                <li class="partner"><h3>Partner 5 Image</h3></li>
-                <li class="partner"><h3>Partner 6 Image</h3></li>
-            </ul>
+        <ul id="partners">
+            <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+            <li class="partner"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
+            <li class="partner"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adenture"></li>
+            <li class="partner"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
+            <li class="partner"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
+            <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
+        </ul>
         </div>
     </section>
 
