update week2 day1 HW activities page CSS tables

--- a/activities.html
+++ b/activities.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!--Link to CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -105,17 +107,19 @@
     </section>
 
     <!--Footer-->
+    <footer>
     <div id="nondisclaimer">
         <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
         <div class="social">
-            <h3>Facebook Image</h3>
-            <h3>Instagram Image</h3>
-            <h3>Twitter Image</h3>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-twitter"></a>
         </div>
     </div>
     <div id="disclaimer">
         <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
     </div>
+    </footer>
 </div>
 </body>
 </html>
