Add JavaScript time zone to the HOME page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,28 @@
     var min = d.getMinutes(); //Get current mintues
     var sec = d.getSeconds(); //Get current seconds
     var ampm //Declare empty variable to store AM or PM
+
+    var utchr = d.getUTCHours(); //Get current Greenwich Mean Time (GMT)
+    var timeDiff; //To store time difference between GMT hour and local hour
+    var adjTimeDiff; //To store time difference converted to positive number
+    var timeZone; //To store the 4 time zones (PT,MT,CT,ET)
     
+    timeDiff = utchr - hr;
+    adjTimeDiff = (timeDiff < 0) ? (timeDiff + 24) : timeDiff ;
+
+    if (adjTimeDiff == 4) {
+        timeZone = 'ET';
+    } else if (adjTimeDiff == 5) {
+        timeZone = 'CT';
+    } else if (adjTimeDiff == 6) {
+        timeZone = 'MT';
+    }else if  (adjTimeDiff == 7) {
+        timeZone = 'PT';
+    } else {
+        timeZone = 'N/A';
+    }
+
+
 
     //Add 0 to single digits for seconds
     if (sec <10) {
@@ -110,7 +131,7 @@
     }
 
     //Assemble time format to display
-    var time = hr + ":" + min + ":" + sec + " " + ampm;
+    var time = hr + ":" + min + ":" + sec + " " + ampm + " " + timeZone;
 
     //Display current local time and time zone on HTML elements
     document.getElementById("clock").innerText = time; //adding time
