add external javascript

--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,12 @@
         <textarea></textarea>
     </div>
 
+    <!--Random Codes-->
+    <div class="randomcode">
+        <input type="text" name="randomcode" placeholder="Enter characters">
+        <p id="codes"></p>
+    </div>
+
     <div class="button">
         <input type="submit" value="Inquire">
     </div>  
@@ -131,40 +137,8 @@
     </footer>
 </div>
 
-<script>
-    //Convert from HTML to JavaScript section partners
-
-    var filesNames = [
-    "partner-bustour",
-    "partner-cabinrental",
-    "partner-campingadv",
-    "partner-collegetours",
-    "partner-rentalbike",
-    "partner-tourgroup"
-    ];
-
-    //type HTMLLiListElement
-    const listElement = document.createElement('ul');
-
-    //create for loop to create 6 images    
-    for(var i=0; i< filesNames.length; i++) {
-
-    //type HTMLULListElement
-    const imageListElement = document.createElement('li');
-    imageListElement.classList.add('partner');
-
-    const imageElement = document.createElement('img');
-    imageElement.src = 'images/partners/' + filesNames[i] + '.png';
-    imageListElement.appendChild(imageElement);
-
-    listElement.appendChild(imageListElement);
-    }
+    <!--Partners-->
+    <script src="js/site_scripts.js"></script>
     
-    //display our images
-    document.getElementById("partners").innerHTML = "";
-    document.getElementById("partners").appendChild(listElement);
-
-</script>    
-
 </body>
 </html>
