--- a/index.html
+++ b/index.html
@@ -81,104 +81,12 @@
 </div>
 
 <!--JavaScript Codes-->
-<script>
-    //Create a time data function
-    function currentTime() {
-    //Declare variables
-    var d = new Date(); //Get current date
-    var hr = d.getHours(); //Get current hours
-    var min = d.getMinutes(); //Get current mintues
-    var sec = d.getSeconds(); //Get current seconds
-    var ampm //Declare empty variable to store AM or PM
+ 
+    <!--Digital Clock-->
+    <script src="js/digclock.js"></script>
 
-    var utchr = d.getUTCHours(); //Get current Greenwich Mean Time (GMT)
-    var timeDiff; //To store time difference between GMT hour and local hour
-    var adjTimeDiff; //To store time difference converted to positive number
-    var timeZone; //To store the 4 time zones (PT,MT,CT,ET)
-    
-    timeDiff = utchr - hr;
-    adjTimeDiff = (timeDiff < 0) ? (timeDiff + 24) : timeDiff ;
-
-    if (adjTimeDiff == 4) {
-        timeZone = 'ET';
-    } else if (adjTimeDiff == 5) {
-        timeZone = 'CT';
-    } else if (adjTimeDiff == 6) {
-        timeZone = 'MT';
-    }else if  (adjTimeDiff == 7) {
-        timeZone = 'PT';
-    } else {
-        timeZone = 'N/A';
-    }
-
-    //Add 0 to single digits for seconds
-    if (sec <10) {
-        sec = "0" + sec;
-    }
-    //Add 0 to single digits for minutes
-    if (min <10) {
-        min = "0" + min;
-    }
-
-    //Determine AM or PM string
-    if (hr == 12) {
-        ampm = "PM" ; //Set to PM 
-    } else if (hr >12) {
-        hr -= 12; //Deduct 12 from hours grearer than 12 (military time)
-        ampm = "PM"; //Set to PM
-    } else {
-        ampm = "AM"; //Set to AM 
-    }
-
-    //Assemble time format to display
-    var time = hr + ":" + min + ":" + sec + " " + ampm + " " + timeZone;
-
-    //Display current local time and time zone on HTML elements
-    document.getElementById("clock").innerText = time; //adding time
-    }
-
-    //Initial run of time data function
-    currentTime(); //
-
-    //Run time data function every 1 second
-    setInterval(currentTime, 1000); //setting timer
-</script>
-
-
-<script>
-    //Convert from HTML to JavaScript section partners
-
-    var filesNames = [
-    "partner-bustour",
-    "partner-cabinrental",
-    "partner-campingadv",
-    "partner-collegetours",
-    "partner-rentalbike",
-    "partner-tourgroup"
-    ];
-
-    //type HTMLLiListElement
-    const listElement = document.createElement('ul');
-
-    //create for loop to create 6 images    
-    for(var i=0; i< filesNames.length; i++) {
-
-    //type HTMLULListElement
-    const imageListElement = document.createElement('li');
-    imageListElement.classList.add('partner');
-
-    const imageElement = document.createElement('img');
-    imageElement.src = 'images/partners/' + filesNames[i] + '.png';
-    imageListElement.appendChild(imageElement);
-
-    listElement.appendChild(imageListElement);
-    }
-    
-    //display our images
-    document.getElementById("partners").innerHTML = "";
-    document.getElementById("partners").appendChild(listElement);
-
-</script>    
+    <!--Partners-->
+    <script src="js/site_scripts.js"></script>
 
 </body>
 </html>
