add random codes

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,8 @@
 
     <div class="button">
         <input type="submit" value="Inquire">
-    </div>  
+    </div>
+
     </div>
 </fieldset>  
 </form>
@@ -139,6 +140,7 @@
 
     <!--Partners-->
     <script src="js/site_scripts.js"></script>
-    
+    <script src="js/randomcodes.js"></script>
+
 </body>
 </html>
