disable the button inquire fix id

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
     </div>
 
     <div class="button">
-        <input type="submit" value="Inquire">
+        <input id="submit" type="submit" value="Inquire">
     </div>
 
     </div>
