add activity cell jQuery function

--- a/activities.html
+++ b/activities.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!--Link to CSS-->
     <link rel="stylesheet" href="style.css">
+
+<!--Link jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/activity.js"> </script>
+
 </head>
 
 <body id="activities">
@@ -55,40 +62,40 @@
                     <tbody>
                         <tr>
                             <td>Hiking</td>
-                            <td>College Hikes</td>
-                            <td>Family Fun</td>
-                            <td>Treasure Trails</td>
-                            <td>Canyon Explorer</td>
+                            <td id="cell">College Hikes</td>
+                            <td id="cell">Family Fun</td>
+                            <td id="cell">Treasure Trails</td>
+                            <td id="cell">Canyon Explorer</td>
                         </tr>
                         <tr>
-                            <td>Kayak</td>
-                            <td>Western Kayak Meetup</td>
+                            <td id="cell">Kayak</td>
+                            <td id="cell">Western Kayak Meetup</td>
                             <td>Not Available</td>
-                            <td>Youth Kayakinn</td>
-                            <td>Kayak Down</td>
+                            <td id="cell">Youth Kayakinn</td>
+                            <td id="cell">Kayak Down</td>
                         </tr>
                         <tr>
-                            <td>Skydiving</td>
-                            <td>Seacliff Diving</td>
-                            <td>Sky is the limit</td>
+                            <td id="cell">Skydiving</td>
+                            <td id="cell">Seacliff Diving</td>
+                            <td id="cell">Sky is the limit</td>
                             <td>Not Available</td>
-                            <td>Sky Diving for Beginners</td>
+                            <td id="cell">Sky Diving for Beginners</td>
                         </tr>
                         <tr>
-                            <td>Biking</td>
-                            <td>Bicycle for One</td>
+                            <td id="cell">Biking</td>
+                            <td id="cell">Bicycle for One</td>
                             <td>Not Available</td>
-                            <td>Bike Meetup Group</td>
+                            <td id="cell">Bike Meetup Group</td>
                             <td>Not Available</td>
                         </tr>
                     </tbody>
                 <tfooter>
                     <tr>
-                        <td>Camping</td>
-                        <td>Youth Camp</td>
-                        <td>Rent a Tent</td>
-                        <td>Campground Adventure</td>
-                        <td>Sunset Camping</td>
+                        <td id="cell">Camping</td>
+                        <td id="cell">Youth Camp</td>
+                        <td id="cell">Rent a Tent</td>
+                        <td id="cell">Campground Adventure</td>
+                        <td id="cell">Sunset Camping</td>
                     </tr>
                 </tfooter>
         </table>
