W6D2 HW add hamburger menu

--- a/cliffs.html
+++ b/cliffs.html
@@ -27,7 +27,7 @@
             <!--nav-->
             <nav class="main-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li class="active"><a href="cliffs.html">Cliffs</a></li>
                     <li><a href="activities.html">Activities</a></li>
                     <li><a href="contact.html">Contact</a></li>
