--- a/activities.html
+++ b/activities.html
@@ -32,7 +32,7 @@
             <!--nav-->
             <nav class="main-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="cliffs.html">Cliffs</a></li>
                     <li class="active"><a href="activities.html">Activities</a></li>
                     <li><a href="contact.html">Contact</a></li>
