--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <!--nav-->
             <nav class="main-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="cliffs.html">Cliffs</a></li>
                     <li><a href="activities.html">Activities</a></li>
                     <li class="active"><a href="contact.html">Contact</a></li>
