--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 
 
     <div class = "container">
-        <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
+        <nav class="navbar navbar-expand-sm navbar-light bg-transparent">
         <div class="logo">
            <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Great Cliffs Logo" width="125"> </a>
         </div>
@@ -76,7 +76,7 @@
               
            </div>
         </nav>
-     </div>
+    </div>
 
 
 <!--Clock-->
