--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 
 
     <div class = "container">
-        <nav class="navbar navbar-expand-md navbar-light bg-transparent">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="logo">
            <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Great Cliffs Logo" width="100"> </a>
         </div>
